--- a/app/src/main/res/layout/activity_login_option.xml
+++ b/app/src/main/res/layout/activity_login_option.xml
@@ -10,10 +10,9 @@
         android:id="@+id/closeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close_gray"
         android:background="@android:color/transparent"
         android:padding="10dp"
-        />
+        android:src="@drawable/ic_close_gray" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,47 +30,43 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_google"
-                />
+                android:src="@drawable/ic_google" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/loginGoogle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:text="Continue With Google"
-                android:minHeight="@dimen/m_button_height"
-                app:icon="@drawable/ic_google"
-                android:textAllCaps="false"
                 android:fontFamily="@font/ubuntu_medium"
+                android:minHeight="@dimen/m_button_height"
+                android:text="Continue With Google"
+                android:textAllCaps="false"
                 android:textSize="15sp"
-                />
+                app:icon="@drawable/ic_google" />
 
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/loginPhoneBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Continue With Phone"
-                android:minHeight="@dimen/m_button_height"
-                app:icon="@drawable/ic_phone_white"
-                android:textAllCaps="false"
                 android:fontFamily="@font/ubuntu_medium"
+                android:minHeight="@dimen/m_button_height"
+                android:text="Continue With Phone"
+                android:textAllCaps="false"
                 android:textSize="15sp"
-                />
+                app:icon="@drawable/ic_phone_white" />
 
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/loginEmailBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Continue With Email"
-                android:minHeight="@dimen/m_button_height"
-                app:icon="@drawable/ic_email_white"
-                android:textAllCaps="false"
                 android:fontFamily="@font/ubuntu_medium"
+                android:minHeight="@dimen/m_button_height"
+                android:text="Continue With Email"
+                android:textAllCaps="false"
                 android:textSize="15sp"
-                />
+                app:icon="@drawable/ic_email_white" />
 
 
         </LinearLayout>
