--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
+    android:padding="15dp"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:text="Home"
         android:textColor="@color/black"
+        android:fontFamily="@font/trebuc"
+        android:textStyle="bold"
         android:textSize="18sp"/>
 
 </FrameLayout>
