--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -147,7 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/cPasswordTil"
             android:layout_marginTop="5dp"
-            android:text="@string/not_have_an_account_register"
+            android:text="@string/already"
             android:textColor="@color/black"
             android:fontFamily="@font/ubuntu_medium"
             />
